# service-template

./: README.md  cookiecutter.json  requirements.txt
{{cookiecutter.service_name}}/: .flake8  .pylintrc  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  setup.cfg
{{cookiecutter.service_name}}/alembic/: env.py
{{cookiecutter.service_name}}/alembic/versions/: a8088b9ef963_.py
{{cookiecutter.service_name}}/api/: main.py  routers.py  schemas.py
{{cookiecutter.service_name}}/api/core/: config.py  databse.py  settings.py
{{cookiecutter.service_name}}/api/core/database/: config.py  connection.py
{{cookiecutter.service_name}}/api/endpoints/: main.py  user.py
{{cookiecutter.service_name}}/api/models/: example.py  user.py
{{cookiecutter.service_name}}/api/respositories/: common.py  user.py
{{cookiecutter.service_name}}/api/tests/: conftest.py  test_example.py
{{cookiecutter.service_name}}/docs/: api.md
