[tool.poetry]
name = "{{cookiecutter.service_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.15.0"
pydantic = {version="^2.5.3", extras=["email", "sqlalchemy"]}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
flake8 = "^7.0.0"
bump-my-version = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-env = "^1.1.3"
pytest-xdist = "^3.5.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-qq -s -v"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
